<resources>
    <string name="app_name">MedCal</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_btn_view_events">Wyświetl zdarzenia</string>
    <string name="text_btn_add_events">Dodaj zdarzenia</string>
    <string name="event_layout_title">Pora wziąć leki!</string>
    <string name="text_current_location">Wybierz pomieszczenie, w którym przebywasz</string>
    <string name="text_btn_summon_drone">Zatwierdź przylot drona</string>
    <string name="start_date">Data początku</string>
    <string name="end_date">Data końca</string>
    <string name="btn_choose_days">Wybierz dni</string>
    <string name="btn_choose_hours">Wybierz godziny</string>
    <string name="btn_choose_meds">Wybierz leki</string>
    <string name="btn_add_event">Zatwiedź</string>
    <string name="title_add_event">Dodaj zdarzenie</string>
    <string name="add_drug_list_option">Dodaj nowy lek</string>


    <string name="once_radio_option">Jednorazowo</string>
    <string name="everyday_radio_option">Codziennie</string>
    <string name="weekly_radio_option">Co tydzień</string>

    <string name="hours_pick_title">Wybierz godziny</string>
    <string name="add_drug_list_title">Wpisz leki</string>
    <string name="select_hours_btn">Wybierz godziny</string>
    <string name="start_date_selection_label">Data początkowa</string>
    <string name="end_date_selection_label">Data końcowa</string>

    <string-array name="event_list">
        <item>
            <string-array name="events1">
                <item>8:00</item>
                <item>APAP</item>
                <item>Witamina C</item>
                <item>Witamina D</item>
            </string-array>
        </item>

        <item>
            <string-array name="events2">
                <item>8:00</item>
                <item>APAP</item>
                <item>Witamina C</item>
                <item>Witamina D</item>
            </string-array>
        </item>

        <item>
            <string-array name="events3">
                <item>8:00</item>
                <item>APAP</item>
                <item>Witamina C</item>
                <item>Witamina D</item>
            </string-array>
        </item>
    </string-array>



    <string-array name="location_list">
        <item>Kuchnia</item>
        <item>Sypialnia</item>
        <item>Łazienka</item>
        <item>Salon</item>
    </string-array>



</resources>
