<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/startDateLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/start_date_selection_label"
            app:layout_constraintBottom_toBottomOf="@+id/eventStartDateText"
            app:layout_constraintEnd_toStartOf="@+id/eventStartDateText"
            app:layout_constraintTop_toTopOf="@+id/eventStartDateText" />

        <TextView
            android:id="@+id/addEventLayoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_add_event"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eventStartDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="DD/MM/YYYY"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/addEventLayoutTitle"
            app:layout_constraintTop_toBottomOf="@+id/addEventLayoutTitle" />

        <TextView
            android:id="@+id/eventEndDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="DD/MM/YYYY"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/eventStartDateText"
            app:layout_constraintStart_toStartOf="@+id/eventStartDateText"
            app:layout_constraintTop_toBottomOf="@+id/eventStartDateText" />

        <Button
            android:id="@+id/accteptBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_add_event"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/periodicOptionsRadGrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/eventEndDateText"
            app:layout_constraintStart_toStartOf="@+id/endDateLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/eventEndDateText">

            <RadioButton
                android:id="@+id/onceRadBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/once_radio_option"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/everydayRadBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/everyday_radio_option"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <RadioButton
                android:id="@+id/weeklyRadBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weekly_radio_option"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </RadioGroup>

        <Button
            android:id="@+id/selectHoursBtn"
            android:layout_width="97dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/select_hours_btn"
            app:layout_constraintStart_toStartOf="@+id/endDateLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/periodicOptionsRadGrp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/drugRecyclerView"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/accteptBtn"
            app:layout_constraintEnd_toEndOf="@+id/drugListLabelTextView"
            app:layout_constraintStart_toStartOf="@+id/drugListLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/drugListLabelTextView" />

        <TextView
            android:id="@+id/endDateLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/end_date_selection_label"
            app:layout_constraintBottom_toTopOf="@+id/periodicOptionsRadGrp"
            app:layout_constraintEnd_toStartOf="@+id/eventEndDateText"
            app:layout_constraintTop_toTopOf="@+id/eventEndDateText" />

        <TextView
            android:id="@+id/drugListLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/add_drug_list_title"
            app:layout_constraintEnd_toEndOf="@+id/addEventLayoutTitle"
            app:layout_constraintStart_toStartOf="@+id/addEventLayoutTitle"
            app:layout_constraintTop_toBottomOf="@+id/pickedHoursTextView" />

        <TextView
            android:id="@+id/pickedHoursTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/eventEndDateText"
            app:layout_constraintStart_toEndOf="@+id/selectHoursBtn"
            app:layout_constraintTop_toTopOf="@+id/selectHoursBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>